osha.policy Changelog
=====================

1.3.33 (unreleased)
-------------------

- Nothing changed yet.


1.3.32 (2011-02-21)
-------------------

- Remove the SpeakerView override, it's been backported to slc.seminarportal.
  [jcbrand]
- replaced getTranslationService().translate with zope.i18n.translate [thomasw]

1.3.31 (2011-01-25)
-------------------

- REVERTING changes done in 1.3.29 (related to slc.seminarportal). They are not
  compatible with the current version of the EU-OSHA site yet
  [thomasw]

1.3.30 (2011-01-25)
-------------------

- Removed patch gocept_linkchecker as requested by gocept, since they
  have updated the linkchecker accordingly
  [thomasw]


1.3.29 (2011-01-12)
-------------------

- Removed the categories vocabulary. It is now defined in slc.seminarportal
  because it's used their for the Seminars portlet. No use in having it twice.
  [jcbrand]
- Remove the SpeakerView override, it's been backported to slc.seminarportal.
  [jcbrand]


1.3.28 (2010-11-22)
-------------------

- ATEventProvider.gather_events(): 
  If we are in the root (i. e. not inside a subsite), restrict
  to the current folder. This restores the p4a.calendar's behaviour of
  gather_events, since that also returns only events from the current
  calendar. [thomasw]

1.3.27 (2010-11-21)
-------------------

- Issue #1861: Refactored the Calendar's event provider to not show events from
  the /oshnetwork folder on the main (or other non-oshnetwork) event foldersi [brand]
- Changed subcategories for WHP #1457 [thomasw]


1.3.26 (2010-10-27)
-------------------

- Added 2 External helper methods for synchronising the MC partners platform
  [thomasw]


1.3.25 (2010-10-05)
-------------------

- Since there is a new eventhandler in sc.publications for updating chapters in a translation, 
  we need to overwrite it here too [thomasw]

1.3.24 (2010-09-12)
-------------------

- Overwriting SpeakerView of slc.seminarportal to make sure only canonical